# Credit_Card_Churn_Prediction

./: .gitignore  Capstone_Project.txt  README.md  first_run.py  pyproject.toml  streamlit_ui.py
backend/: main.py  test_api.py
core/: logger.py
data/: exl_credit_card_churn_data.csv  exl_credit_card_churn_data_cleaned.csv  exl_credit_card_churn_data_cleaned.parquet
models/: all_scalers.pkl  encoding_info.pkl  processing_metadata.pkl  random_forest_churn_model.pkl  random_forest_churn_model_metadata.json  scaler_age.pkl  scaler_balance.pkl  scaler_balanceperproduct.pkl  scaler_estimatedsalary.pkl  scaler_numofproducts.pkl  scaler_tenure.pkl  scaler_tenureageratio.pkl
notebooks/: eda_analysis.ipynb
presentation/: Credit_Card_Churn_Prediction_System.pptx  presentation_content.md
src/: data_preprocessing.py  eda.py  feature_engineering.py  model_trainer.py  pipeline.py
