[project]
name = "exl-credit-card-churn-prediction"
version = "0.1.0"
description = "EXL Capstone Project - Credit Card Churn Prediction using Random Forest and AWS"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas>=1.5.3",
    "numpy>=1.24.3",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "scikit-learn>=1.3.0",
    "mysql-connector-python>=8.1.0",
    "SQLAlchemy>=2.0.19",
    "boto3>=1.28.25",
    "joblib>=1.3.1",
    "plotly>=5.15.0",
    "python-dotenv>=1.0.0",
    "pandera>=0.15.2",
    "ipykernel>=6.30.1",
    "fastparquet>=2024.11.0",
]

[project.scripts]
churn-predict = "main:main"
